# sdk

./: —πÀıŒƒº˛Àµ√˜.md
HDSDK/: CMakeLists.txt  README.md
HDSDK/Protocol/: CMakeLists.txt  HDSDK.cpp  HDSDK.h
HDSDK/SDK/: HCatBuffer.h  HXml.cpp  HXml.h  SDKInfo.cpp  SDKInfo.h
HDSDK/SDK/Data/: HEthernetInfo.cpp  HEthernetInfo.h  HGeneralInfo.cpp  HGeneralInfo.h  HLightInfo.cpp  HLightInfo.h  HOTherInfo.cpp  HOTherInfo.h  HSDKInfo.cpp  HSDKInfo.h  HScreenFunctionInfo.cpp  HScreenFunctionInfo.h  HSensorInfo.cpp  HSensorInfo.h  HTimeInfo.cpp  HTimeInfo.h
HDSDK/demo/: eth.cpp  lightInfo.cpp  sendFile.cpp  sendXml.cpp  systemVolume.cpp  tcpServer.cpp  time.cpp
Java_SDK_Tset/SDK3.0־ִµµ/: index.html
Java_SDK_Tset/SDK3.0־ִµµ/part/: BootLogo.html  BootLogo.md  Ethernet.html  Expand.html  Font.html  General.html  HwSet.html  License.html  Light.html  MediaFile.html  MediaFile.md  OFFOrONSpeed.html  Other.html  Program.html  Program.md  ProgramDefine.html  Protocol.html  Protocol.md  ScreenFunction.html  ScreenFunction.md  ScreenOnoff.html  Sensor.html  Time.html  Time.md  Upgrade.html  Upgrade.md  UsbDevice.html  UsbDevice.md
Java_SDK_Tset/SDK3.0文档/常见问题解决/: Issue.html  Issue.md
Java_SDK_Tset/二次开发demo/: pom.xml
SDK demo/: 你想知道的详细说明.md
SDK demo/SDKNetApi/: CApi.h说明文档.md
SDK demo/SDKNetApi/Demo/: SDKConnect.cpp  SDKDetectionDevice.cpp  SDKService.cpp  SDKSyncEvnet.cpp
SDK demo/SDKNetApi/include/: ICApi.h
SDK demo/SDKNetApi/lib/: HCatNet.lib
SDK demo/SDKNetApi/lib64/: HCatNet.lib
SDK demo/SDKNetApi/src/: SDKNetLib.pro
SDK_FullColor_Test/: help_CH.chm  help_English.chm
SDK_FullColor_Test/MYBTN/: myButtonCheck.Designer.cs  myButtonCheck.cs
SDK_FullColor_Test/SDK2.0/LocalSetting/: FormLocalSetting.Designer.cs
SDK_FullColor_Test/SDK2.0/RemoteServer/: InitForm.Designer.cs  InitForm.cs  MainForm.Designer.cs  MainForm.cs  RelayTimeSetting.Designer.cs  RelayTimeSetting.cs  TimeSwitch.Designer.cs  TimeSwitch.cs  myButtonCheck.cs  mySetButton.Designer.cs  mySetButton.cs  relay.Designer.cs  relay.cs
SDK_FullColor_Test/SDK2.0/SDKLibrary/: DataStruct.cs
SDK_Test/: SDK_Test_HelpFix.cmd  config.xml  history  macroHistory
SDK_Test/Tftpd64/: tftpd32.ini
SDK文档/: index.html
SDK文档/document/BootLogo/: BootLogo开机画面.html  BootLogo开机画面.md
SDK文档/document/Ethernet/: 测试网络.html  测试网络.md  获取网络信息.html  设置网络信息.html  设置网络信息.md
SDK文档/document/Expand/: U盘支持SDK资源文件.md  自定义绘制模拟时钟属性.html
SDK文档/document/Font/: 获取或重加载字体.html
SDK文档/document/General/: SetWebCarFileServer.md  关于配置Socket信息.html  关于配置Socket信息.md  获取和设置Tcp服务器.html  获取和设置Tcp服务器.md  获取或设置系统音量.html  获取设备相关信息.html  获取设备相关信息.md  设置设备相关信息.html  重启设备.html
SDK文档/document/License/: 许可证信息.html  许可证信息.md
SDK文档/document/Light/: 亮度设置.html  亮度设置.md
SDK文档/document/MediaFile/: AddFiles添加文件到设备.html  DeleteFiles从设备删除文件.html  DeleteFiles从设备删除文件.md  GetFiles获取设备媒体文件信息.html  GetFiles获取设备媒体文件信息.md  获取临时内存文件大小.html  获取临时内存文件大小.md
SDK文档/document/OFFOrONSpeed/: 配置开关屏速度.html  配置开关屏速度.md
SDK文档/document/Other/: GPS信息上报.html  GPS信息上报.md  多屏同步标志.html  多屏同步标志.md  节目播放统计文件名.html  节目播放统计文件名.md  节目播放统计标志.html  节目播放统计标志.md
SDK文档/document/Program/: RealTimeUpdate区域实时更新SDK.html  RealTimeUpdate区域实时更新SDK.md  ScreenRotation屏幕旋转.html  ScreenRotation屏幕旋转.md  SwitchProgram节目切换.html  节目编辑.html  节目编辑.md  获取当前播放节目的GUID.html
SDK文档/part/: BootLogo.html  Ethernet.html  Ethernet.md  Expand.html  Font.html  Font.md  General.html  General.md  HwSet.html  License.html  License.md  Light.html  Light.md  MediaFile.html  OFFOrONSpeed.html  OFFOrONSpeed.md  Other.html  Program.html  ProgramDefine.html  ProgramDefine.md  Protocol.html  Protocol.md  ScreenFunction.html  ScreenOnoff.html  Sensor.html  Sensor.md  Time.html  Upgrade.html  UsbDevice.html
SDK文档/常见问题解决/: Issue.html
(+237 files in other folders)
